# catching_robot_dynamic_field

./: .gitignore  CMakeLists.txt  README.md  package.xml
bag_files/: 2019-06-21-20-05-56.bag
cedar/: ball.json  demoIntegrator.json  finalCatchArchitecture.json  myReachingArchitecture.json  originalArchitecture.json
cedar/ballMovementPlugin/: CMakeLists.txt  project.conf
cedar/ballMovementPlugin/ballMovement/: BallPosition.cpp  BallPosition.h  Plugin.cpp  Plugin.h
cedar/cedar_build/cedar/: cedar.conf
cedar/cedar_build/cedar/lib/: libcedardyn.so.6.1.0  libcedartesting_utilities.so.6.1.0  libcedarunits.so.6.1.0
cedar/predictionFieldPlugin/: CMakeLists.txt  project.conf
cedar/predictionFieldPlugin/predictionField/: Plugin.cpp  Plugin.h  PredictionField.cpp  PredictionField.h
configs/calibrationdata/: ost.txt  ost.yaml
launch/: camera_with_sending_obj_coord.launch  catcher.launch  convert_point_stamped_to_file.launch
rviz_configs/: aruco_tf_etc.rviz
script/: camera_pixel_to_camera_obj.py  obj_from_cam_to_robot_tf.py  obj_from_camera_to_robot_frame.py
scripts/: aruco_delay.py  camera_calibration.py  camera_pixel_to_camera_obj.py  catcher.py  colorFilter.py  kalman_data.py  obj_from_camera_to_robot_frame.py  predict_catch_point.py  red_ball_tracker.py  sim_catch.py  test_ur.py  tf_from_cam_to_robot.py  threshBall.py  ur_ball.py
src/: 2019-08-17-12-31-27.bag  converting.cpp  converting.h  main.cpp
